# memo-agent

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  homebrew.yml  release.yml
Formula/: aimemo.rb
aimemo/: Cargo.toml
aimemo/src/: hooks.rs  main.rs
docs/agents/: claude-code.md  copilot.md  cursor.md  windsurf.md
memo-agent/: Cargo.toml
memo-agent/src/: hooks.rs  main.rs  store.rs
memo-agent/tests/: integration.rs
memo-cli/: Cargo.toml
memo-cli/src/: main.rs
memo-cli/tests/: integration.rs
memo-core/: Cargo.toml
memo-core/src/: lib.rs
memo-hooks/: Cargo.toml
memo-hooks/src/: lib.rs
scripts/: update-formula.sh
