[package]
name = "memo-agent"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Persistent memory for AI coding agents"
keywords = ["ai", "agents", "memory", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
