[package]
name = "memo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
memo-core = { path = "../memo-core" }
memo-hooks = { path = "../memo-hooks" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
