[package]
name = "memo-agent"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Persistent memory for AI coding agents"
keywords = ["ai", "agents", "memory", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
memo-core = { path = "../memo-core", version = "0.1.3" }
memo-hooks = { path = "../memo-hooks", version = "0.1.3" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
